# krishna

./: .gitattributes  .gitignore  ANDROID_ACL_PERMISSIONS_FIX.md  ANDROID_CONTROL_PLAN.md  ANDROID_DEVICE_CONTROL_FIXSPEC.md  ANDROID_SIGNING_HANDOFF.md  BRAIN_AUTOSTART_SYNC_PLAN.md  BRAIN_DEVICE_CONTROL_PROMPT_FIX.md  BRAIN_FOLLOWUP_FINDINGS.md  BRAIN_GMAIL_SETUP_RESUME.md  BUILD_PIPELINE_PLAN.md  BUNDLED_DISTRIBUTION_PLAN.md  CHAKRA_PRESENCE_PLAN.md  CHANGELOG.md  CHAT_PERSISTENCE_FIX_HANDOFF.md  CODE_SIGNING_PLAN.md  COMMAND_INSIGHTS_PLAN.md  COMPUTER_CONTROL_PLAN.md  GMAIL_INHOUSE_TOOL_PLAN.md  INTERVIEW_REMOVAL_PLAN.md  KRISHNA_ECOSYSTEM_PLAN.md  LICENSE  LOCAL_FIRST_ARCHITECTURE_PLAN.md  LOCAL_FIRST_PHASE_2_SYNC_PLAN.md  MCP_CONFIRMATION_HANDOFF.md  PHASE_6_CLEANUP.md  PHASE_7_FIXES.md  PROJECT_STRUCTURE.md  README.md  REBRAND_CLEANUP_HANDOFF.md  REMOTE_CLOUD_BRAIN_FIX.md  RESUME_HANDOFF.md  SECURITY.md  SHELL_COMMAND_PLAN.md  STATUS_DASHBOARD_PLAN.md  TEST_RESULTS.md  TEXT_INPUT_UNIFICATION_PLAN.md  UPCOMING_FEATURES.md  UX_CONSOLIDATION_PLAN.md  VOICE_IDENTITY_PLAN.md  (+14 more)
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: android.yml  ci.yml  release.yml
apps/brain/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.ts  ecosystem.config.cjs  package.json  tsconfig.json  vitest.config.ts
docs/: PHASE_3_self_learning.md  PHASE_4_task_agent.md  PHASE_5_REMAINING_handoff.md  PHASE_5_memory_context.md  PHASE_6_multilingual.md  ROADMAP.md
scripts/: copy-wasm.js  create_tests.py  fix_context.py  fix_remaining.py  fix_ts_issues.py  fix_youtube.py  generate-icons.py  sign-apk.ps1  sign-apk.sh  sign-windows.ps1
src/: global.css  main.tsx
src-tauri/: Cargo.toml  info.plist  krishna.desktop  relic.conf  tauri.conf.json
src-tauri/capabilities/: cross-platform.json  default.json  presence.json  teleprompter.json
src-tauri/icons/: icon.icns
src-tauri/src/: activate.rs  api.rs  assistant.rs  automation.rs  brain.rs  capture.rs  lib.rs  main.rs  resolver.rs  secure.rs  shortcuts.rs  tts.rs  window.rs
src-tauri/src/db/: main.rs
src-tauri/src/db/migrations/: audit-log.sql  command-log.sql  devices.sql  learned-actions-v2.sql  learned-actions.sql  memories.sql  normalize-updated-at.sql  rag.sql  reminders.sql  skills.sql  sync-v1.sql  sync-v2.sql  voice-id-v1.sql
src-tauri/src/speaker/: commands.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/__tests__/: actions.test.ts  command-log.test.ts  (+14 more)
(+215 files in other folders)
