[package]
name = "krishna"
version = "1.0.3"
description = "Krishna - A talking desktop AI assistant. Voice-in, voice-out, open apps via voice."
authors = ["life2death"]
license = "GPL-3.0"
repository = "https://github.com/life2death/krishna"
homepage = "https://github.com/life2death/krishna"
documentation = "https://github.com/life2death/krishna"
readme = "../README.md"
keywords = ["ai-assistant", "voice-assistant", "tauri", "desktop-app", "wake-word"]
categories = ["gui", "multimedia", "accessibility"]
edition = "2021"

[lib]
name = "krishna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-http = "2.5.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-keychain = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.6"
base64 = "0.22"
cpal = "0.15.3"
hound = "3.5.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
dotenv = "0.15"
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
ringbuf = "0.4.8"
tauri-plugin-shell = "2.3.1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-log = "2"
log = "0.4"
chrono = "0.4"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
cidre = "0.11.3"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19.0"
windows-registry = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
xcap = "0.0.12"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.0"
# These pull in `machine-uid`, which has no Android/iOS support (its non-desktop
# path fails to compile), so they're desktop-only. Mobile derives the secure-storage
# key differently (see src/secure.rs get_machine_id) and skips PostHog analytics.
tauri-plugin-machine-uid = "0.1.2"
tauri-plugin-posthog = "0.2.4"
